@@ -34,7 +34,7 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
 <blockquote>
 <table border=0 cellpadding=0 cellspacing=0>
   <tr><td>Latest Stable Release: &nbsp;<td><b>2.2.5</b></tr>
-  <tr><td>Latest Beta Release:   &nbsp;<td><b>2.3.28</b></tr>
+  <tr><td>Latest Beta Release:   &nbsp;<td><b>2.3.29</b></tr>
 </table>
 </blockquote>
 
