@@ -1,3 +1,7 @@
+2001-03-02  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* download.html, index.html: News Flash, download 2.3.29.
+
 2001-02-26  Dan Espen  <dane@mk.telcordia.com>
 
 	* generated/NEWS.html: Regenerate NEWS, FAQ, AUTHORS, man pages.
